roles/iptables-openvpn/files/rules.v4
# Generated by iptables-save v1.6.0 on Mon Nov 21 20:40:07 2016
*nat
:PREROUTING ACCEPT [135694:8737212]
:INPUT ACCEPT [30438:1505122]
:OUTPUT ACCEPT [631:44851]
:POSTROUTING ACCEPT [631:44851]
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Nov 21 20:40:07 2016
# Generated by iptables-save v1.6.0 on Mon Nov 21 20:40:07 2016
*filter
:INPUT ACCEPT [1555822:679975640]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2035903:2177796781]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -i eth0 -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i tun+ -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o tun+ -j ACCEPT
-A f2b-sshd -j RETURN
COMMIT
# Completed on Mon Nov 21 20:40:07 2016
